2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* MacPlatform.cs:
	* MacPlatform.addin.xml: Use a proper startup command handler.

	* MacUpdater.cs:
	* UpdateDialog.cs:
	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Simplify
	  dialog and show it down there are no updates.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Prettify
	  update dialog.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs: Hide command when no updateable packages exist.

	* MacUpdater.cs: Fix update paths.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: Add missing ShowAll call.

	* MacUpdater.cs: If explictly checking for updates, tell the
	  user if there are none.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix command handler name.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* MacPlatform.addin.xml: Add command for checking for updates.

	* Makefile.am:
	* MacPlatform.csproj: Updated.

	* MacUpdater.cs:
	* UpdateDialog.cs: Add updater dialog.

	* gtk-gui:
	* gtk-gui/gui.stetic:
	* gtk-gui/generated.cs:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Add generated
	  files.

2009-09-30  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* MacUpdater.cs:
	* MacPlatform.cs:
	* MacPlatform.csproj: Add mostly-implemented Mac updater.

2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* Framework/Carbon.cs: ProcessHICommand takes command by ref.

2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* Framework/Carbon.cs: Send the commands from the menu.

2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* MacPlatform.addin.xml: Fix command names.

2009-09-09  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* Framework/Carbon.cs: